--- a/menu.html
+++ b/menu.html
@@ -56,32 +56,38 @@
             <p id="menuPageText2">If you have any allergy or specific dietary requirements, please inform the couple in advance.</p>            
         </div>
         <div class="menu-container">
-            <div class="menu-container-small" style="margin-bottom: 1em;">
-                <p class="handwriting brown" style="margin-top:0.5em; margin-bottom: 0.5em; font-size:2em;" id="menuPageText3">Standard Menu</p>
+            <div class="menu-container-small">
+                <p class="handwriting brown" id="menuPageText3">Standard Menu</p>
                 <div class="menu">
                     <p class="handwriting" id="menuPageText3-1">To starter</p>
-                    <p id="menuPageText3-2">Confit Duck à l'Orange Rillette with Blood Orange Jelly, Grated Bitter Dark CHocolate and Watercress (Df/Gf)</p>
-                    <p class="italic" id="menuPageText3-3">pair with xxx</p>
+                    <p id="menuPageText3-2-1">Confit Duck à l'Orange Rillette (Df/Gf)</p>
+                    <p class="italic" id="menuPageText3-2-2">with Blood Orange Jelly, Grated Bitter Dark Chocolate and Watercress</p>
+                    <!-- <p class="italic" id="menuPageText3-3">pair with xxx</p> -->
                     <p class="handwriting" id="menuPageText3-4">Main</p>
-                    <p id="menuPageText3-5">Seared Sea Bass Fillet with Saffron and Charred Red Pepper Risotto, Sugar Snap Peas, Braised Baby Leeks, Burnt Lemon, Beetroot Crisps and Saffron Cream Sauce</p>
-                    <p class="italic" id="menuPageText3-6">pair with xxx</p>
+                    <p id="menuPageText3-5-1">Seared Sea Bass Fillet</p>
+                    <p class="italic" id="menuPageText3-5-2">with Saffron and Charred Red Pepper Risotto, Sugar Snap Peas, Braised Baby Leeks, Burnt Lemon, Beetroot Crisps and Saffron Cream Sauce</p>
+                    <!-- <p class="italic" id="menuPageText3-6">pair with xxx</p> -->
                     <p class="handwriting" id="menuPageText3-7">Dessert</p>
-                    <p id="menuPageText3-8">Crème Brûlée with Bitter Chocolate Shortbread Spoon</p>
-                    <p class="italic" id="menuPageText3-9">pair with xxx</p>
+                    <p id="menuPageText3-8-1">Crème Brûlée</p>
+                    <p class="italic" id="menuPageText3-8-2">with Bitter Chocolate Shortbread Spoon</p>
+                    <!-- <p class="italic" id="menuPageText3-9">pair with xxx</p> -->
                 </div>
             </div>
-            <div class="menu-container-small" style="margin-bottom: 1em;">
-                <p class="handwriting brown"  style="margin-top: 0.5em; margin-bottom: 0.5em; font-size:2em;" id="menuPageText4">Vegetarian Menu</p>
+            <div class="menu-container-small">
+                <p class="handwriting brown" id="menuPageText4">Vegetarian Menu</p>
                 <div class="menu">
                     <p class="handwriting" id="menuPageText4-1">To starter</p>
-                    <p id="menuPageText4-2">Chickpea and Courgette Falafel with Coconut Yoghurt, Mango Salsa, Chilli Siracha and Crispy Rocket (V/Ve/Gf)</p>
-                    <p class="italic" id="menuPageText4-3">pair with xxx</p>
+                    <p id="menuPageText4-2-1">Chickpea and Courgette Falafel (V/Ve/Gf)</p>
+                    <p class="italic" id="menuPageText4-2-2">with Coconut Yoghurt, Mango Salsa, Chilli Siracha and Crispy Rocket</p>
+                    <!-- <p class="italic" id="menuPageText4-3">pair with xxx</p> -->
                     <p class="handwriting" id="menuPageText4-4">Main</p>
-                    <p id="menuPageText4-5">Wild Mushroom, Spinach and Brie Open Lasagne with Glazed Vine Cherry Tomatoes, Braised Shallot, Rocket, Parmesan and Balsamic Salac (V)</p>
-                    <p class="italic" id="menuPageText4-6">pair with xxx</p>
+                    <p id="menuPageText4-5-1">Wild Mushroom, Spinach and Brie Open Lasagne (V)</p>
+                    <p class="italic" id="menuPageText4-5-2">with Glazed Vine Cherry Tomatoes, Braised Shallot, Rocket, Parmesan and Balsamic Salad</p>
+                    <!-- <p class="italic" id="menuPageText4-6">pair with xxx</p> -->
                     <p class="handwriting" id="menuPageText4-7">Dessert</p>
-                    <p id="menuPageText4-8">Crème Brûlée with Bitter Chocolate Shortbread Spoon</p>
-                    <p class="italic" id="menuPageText4-9">pair with xxx</p>
+                    <p id="menuPageText4-8-1">Crème Brûlée</p>
+                    <p class="italic" id="menuPageText4-8-2">with Bitter Chocolate Shortbread Spoon</p>
+                    <!-- <p class="italic" id="menuPageText4-9">pair with xxx</p> -->
                 </div>
             </div>
         </div>
