--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
     <div class="contact-container">
         <div class="venue-container">
             <div class="venue-info">
-                <h2 class="handwriting" id="contactPageText1">Venue Address:</h2>
+                <h2 class="handwriting brown" id="contactPageText1">Venue Address:</h2>
                 <p>Queens' College</p>
                 <p>Silver St</p>
                 <p>CB3 9ET</p>
@@ -63,7 +63,7 @@
                 <p>United Kingdom</p> 
             </div>
             <div class="social-container">
-                <h2 class="handwriting" id="contactPageText3">Social Media:</h2>
+                <h2 class="handwriting brown" id="contactPageText3">Social Media:</h2>
                 <p id="contactPageText3-1">We plan to set up a WhatsApp group and a wechat group. Please come back to this page for QR code prior to the wedding date.</p>
             </div>
         </div>
