--- a/index.html
+++ b/index.html
@@ -19,33 +19,31 @@
 
 <body class="landing-page">
 
-<header>
-    <div style="display: none;">
-        <select id="languageDropdown" >
-            <option value="en">🇬🇧 English</option>
-            <option value="zh">🇨🇳 中文</option>
-            <option value="pt">🇧🇷 Português</option>
-        </select>
+    <header>
+        <div style="display: none;">
+            <select id="languageDropdown" >
+                <option value="en">🇬🇧 English</option>
+                <option value="zh">🇨🇳 中文</option>
+                <option value="pt">🇧🇷 Português</option>
+            </select>
+        </div>
+    </header>
+
+    <div class="white-text">
+        <div class="couple-name">
+                <h1 class="handwriting-eng white" id="landingPageText1">Angela</h1>
+                <p class="white" id="landingPageText2">&</p>
+                <h1 class="handwriting-eng white" id="landingPageText3">Marcos</h1>
+        </div>
+        <p  class="white" id="landingPageText4">2024.08.10</p>
+        <p  class="white" id="landingPageText5">Queens' College, Cambridge</p>
+        <p class="lead">
+            <a href="./schedule.html" class="btn btn-outline-light" id="landingPageText6" style="text-decoration: underline;">Find out more</a>
+        </p>
     </div>
-</header>
 
-<div class="white-text">
-    <div class="couple-name">
-            <h1 class="handwriting-eng white" style="font-size: 5em;" id="landingPageText1">Angela</h1>
-            <p class="white" style="margin-top: 1em" id="landingPageText2">and</p>
-            <h1 class="handwriting-eng white" style="font-size: 5em;" id="landingPageText3">Marcos</h1>
-    </div>
-    <p  class="white" style="margin-bottom: 2em" id="landingPageText4">2024.08.10</p>
-    <p  class="white" style="margin-bottom: 2em" id="landingPageText5">Queens' College, Cambridge</p>
-    <p class="lead">
-        <a href="./schedule.html" class="btn btn-outline-light" id="landingPageText6" style="text-decoration: underline;">Find out more</a>
-    </p>
-</div>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-<script type="module" src="./index.js"></script>
-
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script type="module" src="./index.js"></script>
 
 </body>
 </html>
