--- a/menu.html
+++ b/menu.html
@@ -50,7 +50,7 @@
 
     <div class="main-body">
         
-        <div class="menu-container-main" style="margin-bottom: 0;">
+        <div class="menu-container-main">
             <div>
                 <p id="menuPageText1">We are delighted to offer a three-course menu for our wedding dinner, complemented with a vegetarian option. Please let us know your preferred choice.</p>
                 <p id="menuPageText2">If you have any allergy or specific dietary requirements, please inform the couple in advance.</p>            
@@ -96,7 +96,7 @@
     </div>
 
     <div class="footer">
-        <p class="brown" style="font-size:smaller;" id="footerText1">with ♡ from London</p>
+        <p class="brown" id="footerText1">with ♡ from London</p>
     </div>
 
     <script type="module" src="./index.js"></script>
