--- a/schedule.html
+++ b/schedule.html
@@ -52,7 +52,7 @@
         <div class="schedule-container-main">
             <div class="main-container">
                 <div class="schedule-title">
-                    <h1 class="handwriting brown" style="font-size: 2em; margin: 1em;" id="schedulePageText1">Schedule of the Day</h1>
+                    <h1 class="handwriting brown" id="schedulePageText1">Schedule of the Day</h1>
                 </div>
                 <div class="schedule-container">
                     <div class="event">
@@ -138,7 +138,7 @@
     </div>
 
     <div class="footer">
-        <p class="brown" style="font-size:smaller;" id="footerText1">with ♡ from London</p>
+        <p class="brown" id="footerText1">with ♡ from London</p>
     </div>
 
     <script type="module" src="./index.js"></script>
