--- a/travel-guide.html
+++ b/travel-guide.html
@@ -135,7 +135,7 @@
     </div>
 
     <div class="footer">
-        <p class="brown" style="font-size:smaller;" id="footerText1">with ♡ from London</p>
+        <p class="brown" id="footerText1">with ♡ from London</p>
     </div>
 
     <script type="module" src="./index.js"></script>
